k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: yourdockerhubusername/ad-management-system-backend:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: "/ads/"
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: "/ads/"
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
