k8s/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  type: ClusterIP
  selector:
    app: loki
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3100
